crates/cli/tests/snapshots/run_node_test__node__handles_process_exit_code_nonzero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:exitCodeNonZero
stdout
This should appear!
▪▪▪▪ node:exitCodeNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task node:exitCodeNonZero failed to run.
  ╰─▶ Process node failed: exit code 1
