crates/cli/tests/snapshots/run_node_test__node__handles_process_exit_code_zero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:exitCodeZero
stdout
This should appear!
▪▪▪▪ node:exitCodeZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr
