crates/cli/tests/snapshots/run_node_test__node__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:processExitNonZero
stdout
▪▪▪▪ node:processExitNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task node:processExitNonZero failed to run.
  ╰─▶ Process node failed: exit code 1
