crates/cli/tests/snapshots/run_node_test__node__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:processExitZero
stdout
▪▪▪▪ node:processExitZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr
