crates/cli/tests/snapshots/run_node_test__node__passes_args_to_the_node_bin.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:binExecArgs
[]
▪▪▪▪ node:binExecArgs (100ms)

Tasks: 1 completed
 Time: 100ms
