crates/cli/tests/snapshots/run_node_test__node__runs_from_project_root.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromProject
<WORKSPACE>/base
▪▪▪▪ node:runFromProject (100ms)

Tasks: 1 completed
 Time: 100ms
