crates/cli/tests/snapshots/run_node_test__node__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromWorkspace
<WORKSPACE>
▪▪▪▪ node:runFromWorkspace (100ms)

Tasks: 1 completed
 Time: 100ms
